<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="hr.ferit.mahmutaksakalli.androidsocialeventstarter.activities.WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeh1"
        android:textSize="32sp"
        android:textColor="@color/colorBg"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:text="@string/welcomeh2"
        android:textSize="15sp"
        android:textColor="@color/welcomeh2"
        android:textStyle="italic"/>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/red_100"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:visibility="gone"
        android:text="@string/errorMessage"
        android:textColor="@color/red_600" />



</LinearLayout>
